--- a/.github/workflows/auto_pull_request_and_merge.yml
+++ b/.github/workflows/auto_pull_request_and_merge.yml
@@ -18,10 +18,10 @@ jobs:
       uses: actions/checkout@v3
 
     # 2. Configurar GitHub CLI
-    - name: Set up GitHub CLI
-      run: |
-        sudo apt-get install -y gh
-        gh auth login --with-token <<< "$GITHUB_TOKEN"
+    # - name: Set up GitHub CLI
+    #  run: |
+    #    sudo apt-get install -y gh
+    #    gh auth login --with-token <<< "$GITHUB_TOKEN"
 
     # 3. Crear Pull Request
     - name: Create Pull Request
