--- a/.github/workflows/auto_pull_request_and_merge.yml
+++ b/.github/workflows/auto_pull_request_and_merge.yml
@@ -25,16 +25,16 @@ jobs:
     #    gh auth login --with-token <<< "$GITHUB_TOKEN"
 
     # 2. Verificar si hay un pull request creado, por el doble disparador
-    - name: Check for Existing Pull Request
-      run: |
-        if gh pr list --base main --head one-victus/dev --json number --jq '.[].number' | grep -q '.'; then
-          echo "Pull Request already exists. Skipping creation."
-          exit 0
-        fi
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #- name: Check for Existing Pull Request
+    #  run: |
+    #    if gh pr list --base main --head one-victus/dev --json number --jq '.[].number' | grep -q '.'; then
+    #      echo "Pull Request already exists. Skipping creation."
+    #      exit 0
+    #    fi
+    #  env:
+    #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    # 3. Validar commits pendientes
+    # 2. Validar commits pendientes
     - name: Validate Pending Commits
       run: |
         if [ "$(git rev-list --count origin/main..HEAD)" -eq 0 ]; then
@@ -42,25 +42,30 @@ jobs:
           exit 0
         fi
 
-    # 4. Crear Pull Request
+    # 3. Crear Pull Request
     - name: Create Pull Request
       id: create_pr
       run: |
-        gh pr create --title "Auto PR: one-victus/dev to main" \
+        if gh pr list --base main --head one-victus/dev --json number --jq '.[].number' | grep -q '.'; then
+          echo "Pull Request already exists."
+          exit 0
+        else
+          gh pr create --title "Auto PR: one-victus/dev to main" \
                      --body "This PR was created automatically by GitHub Actions." \
                      --base main \
                      --head one-victus/dev \
+        fi
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    # 5. Hacer Merge del PR
+    # 4. Hacer Merge del PR
     - name: Merge Pull Request
       run: |
         gh pr merge $(gh pr list --state open --json number --jq '.[0].number') --merge
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    # 6. Validar y limpiar ramas remotas
+    # 5. Validar y limpiar ramas remotas
     - name: Validate and Cleanup Branches
       run: |
         if git show-ref --verify --quiet refs/remotes/origin/one-victus/dev; then
