--- a/.github/workflows/auto_pull_request_and_merge.yml
+++ b/.github/workflows/auto_pull_request_and_merge.yml
@@ -53,7 +53,7 @@ jobs:
           gh pr create --title "Auto PR: one-victus/dev to main" \
                        --body "This PR was created automatically by GitHub Actions." \
                        --base main \
-                       --head one-victus/dev \
+                       --head one-victus/dev
         fi
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
