--- a/.github/workflows/auto_pull_request_and_merge.yml
+++ b/.github/workflows/auto_pull_request_and_merge.yml
@@ -1,9 +1,9 @@
 name: Auto Pull Request and Merge
 
 on:
-  push:
-    branches:
-      - one-victus/dev
+  #push:
+  #  branches:
+  #    - one-victus/dev
   create:
     branches:
       - one-victus/dev
@@ -23,16 +23,6 @@ jobs:
     #  run: |
     #    sudo apt-get install -y gh
     #    gh auth login --with-token <<< "$GITHUB_TOKEN"
-
-    # 2. Verificar si hay un pull request creado, por el doble disparador
-    #- name: Check for Existing Pull Request
-    #  run: |
-    #    if gh pr list --base main --head one-victus/dev --json number --jq '.[].number' | grep -q '.'; then
-    #      echo "Pull Request already exists. Skipping creation."
-    #      exit 0
-    #    fi
-    #  env:
-    #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     # 2. Validar commits pendientes
     - name: Validate Pending Commits
