--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
     "typescript": "^5.7.2"
+  },
+  "dependencies": {
+    "date-fns": "^4.1.0",
+    "lodash": "^4.17.21"
   }
 }
